test/runnable/extra-files/link14828c.d
module link14828c;

import link14828a;
import link14828b;

void test()
{
    func1();
    func2();
}
