test/fail_compilation/test314d.d
module test314d;

import imports.test314d;

void foo()
{
    bar();
}
